Social link alignment fixed

--- a/assets/css/social.css
+++ b/assets/css/social.css
@@ -7,23 +7,23 @@ ul.social {
     max-width: 800px;
     margin-top: 20px;
 }
- 
+
 ul.social li {
-    width: 20%;
+    width: 33%;
     float:left;
     display:inline-block;
     font-weight: 800;
 }
- 
+
 ul.social li a {
 	color: #FFFFFF;
 	text-decoration: none;
 }
- 
+
 ul.social li a:hover {
     color: #57A3E8;
 }
- 
+
 @media screen and (max-width: 800px) {
     ul.social li {
         width: 100%;
